--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="/Color-hub-scroll/libs/gsap/gsap.min.js" defer></script>
+    <script src="/Color-hub-scroll/libs/gsap/ScrollTrigger.min.js" defer></script>
+    <script src="/Color-hub-scroll/libs/gsap/ScrollSmoother.min.js" defer></script>
 </head>
 <body>
     
