обнулил стили, прописал переменную root для резиновой верстки

--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -9,8 +9,13 @@
     <script src="/Color-hub-scroll/libs/gsap/gsap.min.js" defer></script>
     <script src="/Color-hub-scroll/libs/gsap/ScrollTrigger.min.js" defer></script>
     <script src="/Color-hub-scroll/libs/gsap/ScrollSmoother.min.js" defer></script>
+
+    <link rel="stylesheet" href="/Color-hub-scroll/css/main.css">
+    <script src="/Color-hub-scroll/project/js/app.js" defer></script>
 </head>
 <body>
+
+    <header class="hero-section"></header>
     
 </body>
 </html> 
