--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    This is new web
 
     <script src="/Color-hub-scroll/libs/gsap/gsap.min.js" defer></script>
     <script src="/Color-hub-scroll/libs/gsap/ScrollTrigger.min.js" defer></script>
@@ -15,7 +16,9 @@
 </head>
 <body>
 
-    <header class="hero-section"></header>
+    <header class="hero-section">
+        <img class="hero" src="/Color-hub-scroll/img/hero.png" alt="color-woman">
+    </header>
     
 </body>
 </html> 
