накинули первых стилей

--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    This is new web
+    <title>Color-web</title>
 
     <script src="/Color-hub-scroll/libs/gsap/gsap.min.js" defer></script>
     <script src="/Color-hub-scroll/libs/gsap/ScrollTrigger.min.js" defer></script>
@@ -18,7 +17,16 @@
 
     <header class="hero-section">
         <img class="hero" src="/Color-hub-scroll/img/hero.png" alt="color-woman">
+
+        <div class="container">
+            <div class="main-header">
+                <h1 class="main-title">art-color</h1>
+            </div>
+        </div>
+        
     </header>
+
+
     
 </body>
 </html> 
