--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -17,14 +17,21 @@
 
     <header class="hero-section">
         <img class="hero" src="/Color-hub-scroll/img/hero.png" alt="color-woman">
-
         <div class="container">
             <div class="main-header">
                 <h1 class="main-title">art-color</h1>
             </div>
         </div>
-        
     </header>
+
+    <div class="portfolio">
+        <div class="container">
+            <main class="gallery">
+                <div class="gallery__left">ggg</div>
+                <div class="gallery__right">ttt</div>
+            </main>
+        </div>
+    </div>
 
 
     
