добавляет верстку, пикчи и стили
верстка блока с картинками и контентом, стили, определяющие их позиционирование. за счет переменных и индекса калькулитора они делаются резиновыми без использования брейкпоинтов

--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -27,8 +27,26 @@
     <div class="portfolio">
         <div class="container">
             <main class="gallery">
-                <div class="gallery__left">ggg</div>
-                <div class="gallery__right">ttt</div>
+                <div class="gallery__left">
+                    <img class="gallery__item" src="/Color-hub-scroll/img/work/1.jpg" alt="">
+                    <img class="gallery__item" src="/Color-hub-scroll/img/work/2.jpg" alt="">
+                </div>
+
+                <div class="gallery__right">
+                    <div class="text-block gallery__item">
+                        <h2 class="text-block__h">Universal Music Group is the world's leading music company.
+                            We own and operate a broad array of businesses in more than 60 countries.</h2>
+                            <p class="text-block__p">The company's origins go back to the formation of the 
+                                American branch of Decca Records in September 1934 and its name and company logo originates 
+                                from Carl Laemmle's Universal Pictures. 
+                                Although the movie studio and the music business share a common history, today the former is part of 
+                                NBCUniversal and the latter an independent commercial entity.</p>
+                    </div>
+
+                    <img src="/Color-hub-scroll/img/work/4.jpg" alt="">
+                    <img src="/Color-hub-scroll/img/work/5.jpg" alt="">
+                    <img src="/Color-hub-scroll/img/work/3.jpg" alt="">
+                </div>
             </main>
         </div>
     </div>
