уточняет параметры позиционирования пикч и контента

--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -30,6 +30,12 @@
                 <div class="gallery__left">
                     <img class="gallery__item" src="/Color-hub-scroll/img/work/1.jpg" alt="">
                     <img class="gallery__item" src="/Color-hub-scroll/img/work/2.jpg" alt="">
+
+                    <div class="text-block gallery__item">
+                        <h2 class="text-block__h">John Wick</h2>
+                            <p class="text-block__p">John Wick is an American neo-noir action thriller media franchise created by Derek Kolstad and centered around John Wick, a former hitman who is forced back into the criminal underworld he had previously abandoned.</p>
+                    </div>
+                    <img class="gallery__item" src="/Color-hub-scroll/img/work/6.jpg" alt="">
                 </div>
 
                 <div class="gallery__right">
