--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -17,9 +17,9 @@
 <div class="wrapper">
     <div class="content">
         <header class="hero-section">
-            <img class="hero" src="/Color-hub-scroll/img/hero.png" alt="color-woman">
+            <img data-speed=".6" class="hero" src="/Color-hub-scroll/img/hero.png" alt="color-woman">
             <div class="container">
-                <div class="main-header">
+                <div data-speed=".75" class="main-header">
                     <h1 class="main-title">art-color</h1>
                 </div>
             </div>
