--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -28,7 +28,7 @@
         <div class="portfolio">
             <div class="container">
                 <main class="gallery">
-                    <div class="gallery__left">
+                    <div data-speed=".9" class="gallery__left">
                         <img class="gallery__item" src="/Color-hub-scroll/img/work/1.jpg" alt="">
                         <img class="gallery__item" src="/Color-hub-scroll/img/work/2.jpg" alt="">
     
@@ -39,7 +39,7 @@
                         <img class="gallery__item" src="/Color-hub-scroll/img/work/6.jpg" alt="">
                     </div>
     
-                    <div class="gallery__right">
+                    <div data-speed="1.1" class="gallery__right">
                         <div class="text-block gallery__item">
                             <h2 class="text-block__h">Universal Music Group is the world's leading music company.
                                 We own and operate a broad array of businesses in more than 60 countries.</h2>
