--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -50,9 +50,9 @@
                                     NBCUniversal and the latter an independent commercial entity.</p>
                         </div>
     
-                        <img src="/Color-hub-scroll/img/work/4.jpg" alt="">
-                        <img src="/Color-hub-scroll/img/work/5.jpg" alt="">
-                        <img src="/Color-hub-scroll/img/work/3.jpg" alt="">
+                        <img class="gallery__item" src="/Color-hub-scroll/img/work/4.jpg" alt="">
+                        <img class="gallery__item" src="/Color-hub-scroll/img/work/5.jpg" alt="">
+                        <img class="gallery__item" src="/Color-hub-scroll/img/work/3.jpg" alt="">
                     </div>
                 </main>
             </div>
