добавляет код для анимации при скролле

--- a/Color-hub-scroll/project/index.html
+++ b/Color-hub-scroll/project/index.html
@@ -20,7 +20,7 @@
             <img data-speed=".6" class="hero" src="/Color-hub-scroll/img/hero.png" alt="color-woman">
             <div class="container">
                 <div data-speed=".75" class="main-header">
-                    <h1 class="main-title">art-color</h1>
+                    <h1 class="main-title">art-sensation</h1>
                 </div>
             </div>
         </header>
